fix ugly looking "our latest games" on small screens

--- a/static/styles/public.css
+++ b/static/styles/public.css
@@ -885,3 +885,12 @@ h1.game-page.game-name
 	width: 100%;
 	height: 32px;
 }
+
+@media screen and (max-width: 666px)
+{
+	.gameholder > .game:not(.centerized)
+	{
+		width: 219px;
+		height: 350px;
+	}
+}
